# launcher-uos

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc  uos-memory.md  开发日志.md  打包错误文档记录.md
.claude/: settings.local.json
.github/workflows/: build.yml
debian/: changelog  control  postinst  prerm  rules
docs/: deepin25-compatibility-check.md  节点1验证指南.md  节点1验证问题清单.md  节点2验证指南.md  设计变更对比-最终版.md  详细开发计划.md
docs/design/: development-plan-v3.md
docs/guide/: Qt5-毛玻璃实现指南.md
docs/interface/: 接口文档-v3.md
docs/prototype/: Launcher-Prototype-v3.html  Launcher-Prototype.html
docs/requirements/: user-requirements.md  功能需求-v3.md
docs/设计/: 详细开发计划-v4.md
qml/: Main.qml
qml/components/: CategoryButton.qml  EmptyState.qml  GlassCard.qml  ResultItem.qml  SearchBar.qml  SearchResults.qml
resources/data/: launcher.desktop
src/app/: HotkeyManager.cpp  HotkeyManager.h  SingleInstance.cpp  SingleInstance.h
src/data/: ApplicationRepository.cpp  ApplicationRepository.h  Database.cpp  Database.h  FileIndexer.cpp  FileIndexer.h  FileRepository.cpp  FileRepository.h  Settings.cpp  Settings.h
src/domain/: Application.cpp  Application.h  FileIndex.cpp  FileIndex.h
src/services/: SearchEngine.cpp  SearchEngine.h
src/tests/: backend-test.cpp
src/viewmodel/: SearchModel.cpp  SearchModel.h  SearchViewModel.cpp  SearchViewModel.h
